# sentinel_audit

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: inventory.yaml  sample_audit_report.md
sentinel_audit/: __init__.py  cli.py  inventory.py  main.py  orchestrator.py
sentinel_audit/audit/: __init__.py  base.py  compliance_audit.py  container_audit.py  cron_audit.py  filesystem_audit.py  firewall_audit.py  kernel_audit.py  lynis_adapter.py  network_audit.py  packages_audit.py  permissions_audit.py  process_audit.py  services_audit.py  ssh_audit.py  sysctl_audit.py  system_info.py  users_audit.py
sentinel_audit/config/: __init__.py  default_rules.yaml
sentinel_audit/core/: __init__.py  constants.py  exceptions.py  executor.py  models.py  scoring.py  ssh_client.py  utils.py
sentinel_audit/reporting/: __init__.py  base.py  console_report.py  consolidated_report.py  html_report.py  json_report.py  markdown_report.py  pdf_report.py
sentinel_audit/templates/: consolidated_report.jinja2  html_report.jinja2
tests/: conftest.py  test_cli.py  test_container.py  test_cron.py  test_filesystem.py  test_firewall.py  test_inventory.py  test_network.py  test_permissions.py  test_reporting.py  test_scoring.py  test_services.py  test_ssh_audit.py  test_ssh_client.py  test_users.py  test_utils.py
